GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_cast_shadow")]
    internal static partial int dse_spot_light_get_cast_shadow(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_cast_shadow")]
    internal static partial void dse_spot_light_set_cast_shadow(uint e, int v);

    // ---- SkyLightComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_sky_light_get_up_color")]
    internal static partial void dse_sky_light_get_up_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_set_up_color")]
    internal static partial void dse_sky_light_set_up_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_get_down_color")]
    internal static partial void dse_sky_light_get_down_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_set_down_color")]
    internal static partial void dse_sky_light_set_down_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_get_intensity")]
    internal static partial float dse_sky_light_get_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_set_intensity")]
    internal static partial void dse_sky_light_set_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_get_enabled")]
    internal static partial int dse_sky_light_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_set_enabled")]
    internal static partial void dse_sky_light_set_enabled(uint e, int v);

    // ---- TreeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_tree_get_enabled")]
    internal static partial int dse_tree_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_enabled")]
    internal static partial void dse_tree_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_density")]
    internal static partial float dse_tree_get_density(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_density")]
    internal static partial void dse_tree_set_density(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_spawn_radius")]
    internal static partial float dse_tree_get_spawn_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_spawn_radius")]
    internal static partial void dse_tree_set_spawn_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_chunk_size")]
    internal static partial float dse_tree_get_chunk_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_chunk_size")]
    internal static partial void dse_tree_set_chunk_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_min_scale")]
    internal static partial float dse_tree_get_min_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_min_scale")]
    internal static partial void dse_tree_set_min_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_max_scale")]
    internal static partial float dse_tree_get_max_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_max_scale")]
    internal static partial void dse_tree_set_max_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_lod1_distance")]
    internal static partial float dse_tree_get_lod1_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_lod1_distance")]
    internal static partial void dse_tree_set_lod1_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_cull_distance")]
    internal static partial float dse_tree_get_cull_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_cull_distance")]
    internal static partial void dse_tree_set_cull_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_wind_strength")]
    internal static partial float dse_tree_get_wind_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_wind_strength")]
    internal static partial void dse_tree_set_wind_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_wind_speed")]
    internal static partial float dse_tree_get_wind_speed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_wind_speed")]
    internal static partial void dse_tree_set_wind_speed(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_cast_shadow")]
    internal static partial int dse_tree_get_cast_shadow(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_cast_shadow")]
    internal static partial void dse_tree_set_cast_shadow(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_shadow_distance")]
    internal static partial float dse_tree_get_shadow_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_shadow_distance")]
    internal static partial void dse_tree_set_shadow_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_seed")]
    internal static partial int dse_tree_get_seed(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_seed")]
    internal static partial void dse_tree_set_seed(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_height_variation")]
    internal static partial float dse_tree_get_height_variation(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_height_variation")]
    internal static partial void dse_tree_set_height_variation(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_random_rotation")]
    internal static partial int dse_tree_get_random_rotation(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_random_rotation")]
    internal static partial void dse_tree_set_random_rotation(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_billboard_distance")]
    internal static partial float dse_tree_get_billboard_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_billboard_distance")]
    internal static partial void dse_tree_set_billboard_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_mesh_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_tree_set_mesh_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_mesh_path")]
    internal static partial int dse_tree_get_mesh_path(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_lod1_mesh_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_tree_set_lod1_mesh_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_lod1_mesh_path")]
    internal static partial int dse_tree_get_lod1_mesh_path(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_tree_set_billboard_texture_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_tree_set_billboard_texture_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_tree_get_billboard_texture_path")]
    internal static partial int dse_tree_get_billboard_texture_path(uint e, [Out] byte[] buf, int bufSize);

    // ---- TerrainTileManagerComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_enabled")]
    internal static partial int dse_terrain_tile_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_enabled")]
    internal static partial void dse_terrain_tile_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_tile_world_size")]
    internal static partial float dse_terrain_tile_get_tile_world_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_tile_world_size")]
    internal static partial void dse_terrain_tile_set_tile_world_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_tile_resolution")]
    internal static partial int dse_terrain_tile_get_tile_resolution(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_tile_resolution")]
    internal static partial void dse_terrain_tile_set_tile_resolution(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_max_height")]
    internal static partial float dse_terrain_tile_get_max_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_max_height")]
    internal static partial void dse_terrain_tile_set_max_height(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_load_radius")]
    internal static partial float dse_terrain_tile_get_load_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_load_radius")]
    internal static partial void dse_terrain_tile_set_load_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_unload_radius")]
    internal static partial float dse_terrain_tile_get_unload_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_unload_radius")]
    internal static partial void dse_terrain_tile_set_unload_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_use_procedural")]
    internal static partial int dse_terrain_tile_get_use_procedural(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_use_procedural")]
    internal static partial void dse_terrain_tile_set_use_procedural(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_procedural_base_height")]
    internal static partial float dse_terrain_tile_get_procedural_base_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_procedural_base_height")]
    internal static partial void dse_terrain_tile_set_procedural_base_height(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_max_lod_levels")]
    internal static partial int dse_terrain_tile_get_max_lod_levels(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_max_lod_levels")]
    internal static partial void dse_terrain_tile_set_max_lod_levels(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_get_lod_distance_factor")]
    internal static partial float dse_terrain_tile_get_lod_distance_factor(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_set_lod_distance_factor")]
    internal static partial void dse_terrain_tile_set_lod_distance_factor(uint e, float v);

    // ---- DynamicObstacleComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_get_enabled")]
    internal static partial int dse_dyn_obstacle_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_set_enabled")]
    internal static partial void dse_dyn_obstacle_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_get_shape")]
    internal static partial int dse_dyn_obstacle_get_shape(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_set_shape")]
    internal static partial void dse_dyn_obstacle_set_shape(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_get_box_extents")]
    internal static partial void dse_dyn_obstacle_get_box_extents(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_set_box_extents")]
    internal static partial void dse_dyn_obstacle_set_box_extents(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_get_cylinder_radius")]
    internal static partial float dse_dyn_obstacle_get_cylinder_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_set_cylinder_radius")]
    internal static partial void dse_dyn_obstacle_set_cylinder_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_get_cylinder_height")]
    internal static partial float dse_dyn_obstacle_get_cylinder_height(uint e);
